# grpc-web

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yaml
examples/: Cargo.toml  build.rs
examples/proto/: example.proto
examples/src/: client.rs  lib.rs
examples/tests/: grpc.rs  grpc_web.rs
src/: codec.rs  config.rs  lib.rs
