[package]
name = "grpc-web"
version = "0.1.0"
authors = ["LIU JIE <isjieliu@163.com>"]
description = "gRPC web server based on Volo"
documentation = "https://docs.rs/grpc-web"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Millione/grpc-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = "0.4"
volo-grpc = "0.4"

base64 = "0.21"
bytes = "1"
futures = "0.3"
futures-core = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
pin-project = "1"
tracing = "0.1"
