[package]
name = "grpc-web"
version = "0.0.1"
authors = ["LIU JIE <isjieliu@163.com>"]
description = "gRPC web server based on Volo"
documentation = "https://docs.rs/grpc-web"
keywords = ["grpc-web", "volo"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Millione/grpc-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = { git = "https://github.com/Millione/volo", branch = "grpc-web" }
volo-grpc = { git = "https://github.com/Millione/volo", branch = "grpc-web" }

base64 = "0.21"
bytes = "1"
futures = "0.3"
futures-core = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
pin-project = "1"
tracing = "0.1"

[dev-dependencies]
volo-build = { git = "https://github.com/Millione/volo", branch = "grpc-web" } 

[workspace]
members = ["examples"]
